--- a/src/sample/loginPage.fxml
+++ b/src/sample/loginPage.fxml
@@ -45,7 +45,7 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #1634;" VBox.vgrow="ALWAYS">
          <children>
-            <AnchorPane prefHeight="400.0" prefWidth="228.0" style="-fx-background-color: black;">
+            <AnchorPane layoutX="-14.0" layoutY="-9.0" prefHeight="400.0" prefWidth="228.0" style="-fx-background-color: black;">
                <children>
                   <Text fill="WHITE" layoutX="67.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome." wrappingWidth="94.71051025390625">
                      <font>
@@ -57,7 +57,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                      </font>
                   </Text>
-                  <Button fx:id="contactInfo" layoutX="50.0" layoutY="294.0" mnemonicParsing="false" onAction="#setButtonAction" text="Contact information" />
+                  <Button fx:id="contactInfo" layoutX="50.0" layoutY="294.0" mnemonicParsing="false" onAction="#setContactInfoButtonAction" text="Contact information" />
                </children>
             </AnchorPane>
             <TextField fx:id="username" layoutX="364.0" layoutY="115.0" promptText="username" />
@@ -69,5 +69,12 @@
             <PasswordField fx:id="password" layoutX="364.0" layoutY="187.0" promptText="password" />
          </children>
     </AnchorPane>
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+
+</AnchorPane>
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+
+</AnchorPane>
+      <fx:include source="ContactInfoPage.fxml" />
   </children>
 </VBox>
