--- a/src/sample/StocksInfo.fxml
+++ b/src/sample/StocksInfo.fxml
@@ -14,5 +14,6 @@
       <VBox fx:id="vBoxBis" layoutX="303.0" layoutY="115.0" prefHeight="18.0" prefWidth="266.0" />
       <Text layoutX="403.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter URLs" />
       <VBox fx:id="vBoxOpenUrl" layoutX="221.0" layoutY="115.0" prefHeight="18.0" prefWidth="100.0" />
+      <Button layoutX="100.0" layoutY="20.0" mnemonicParsing="false" text="Open" />
    </children>
 </AnchorPane>
