--- a/src/sample/ContactInfoPage.fxml
+++ b/src/sample/ContactInfoPage.fxml
@@ -42,13 +42,13 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="415.0" prefWidth="640.0" style="-fx-border-color: REd;">
       <children>
-            <Hyperlink fx:id="hyperlink" alignment="TOP_CENTER" contentDisplay="TOP" layoutX="175.0" layoutY="89.0" onAction="#openGithub" prefHeight="43.0" prefWidth="289.0" text="https://github.com/lucamouchel">
+            <Hyperlink fx:id="hyperlink" alignment="TOP_CENTER" contentDisplay="TOP" layoutX="175.0" layoutY="75.0" onAction="#openGithub" prefHeight="43.0" prefWidth="289.0" text="https://github.com/lucamouchel">
                <font>
                   <Font size="14.0" />
                </font></Hyperlink>
-            <TextField alignment="TOP_CENTER" layoutX="246.0" layoutY="139.0" text="Luca Mouchel : " />
-            <TextField alignment="TOP_CENTER" layoutX="246.0" layoutY="200.0" text="+33 6 58 99 03 47" />
-            <TextField layoutX="239.0" layoutY="261.0" onMouseClicked="#openEmail" prefHeight="26.0" prefWidth="162.0" text="lucamouchel13@gmail.com" />
+            <TextField alignment="TOP_CENTER" layoutX="245.0" layoutY="154.0" text="Luca Mouchel  " />
+            <TextField alignment="TOP_CENTER" layoutX="245.0" layoutY="214.0" text="+33 6 58 99 03 47" />
+            <TextField layoutX="238.0" layoutY="276.0" onMouseClicked="#openEmail" prefHeight="26.0" prefWidth="162.0" text="lucamouchel13@gmail.com" />
       </children>
     </AnchorPane>
   </children>
